# turingosv2

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_TREE.txt  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: turingos_coder.toml  turingos_git_historian.toml  turingos_goal_poller.toml  turingos_karpathy_editor.toml  turingos_os_system_planner.toml  (+7 more)
audit/: project_code_audit.md  v1_framework_proposal.md
bible/: GROUNDHOG_SEALED_CONSTITUTION.md  反奥利奥架构的AI图灵机 - 顶层的信号控制 4d12dda4a0188218ac3781b53db494c6 2.md  用图灵机哲学做出一个能通过长周期图灵测试的AI 48e2dda4a01882cb96b08133adeb7a0e.md  群体智慧的架构：⚪⚫⚪反奥利奥理论 f9d2dda4a0188265b673810a633225b5.md  验证的非对称性：弱者能不能监管强者？ a642dda4a0188348b36f81cd376e674b.md
crates/turingos-observe/: Cargo.toml
crates/turingos-observe/src/: lib.rs  run_basis.rs  run_delta.rs  run_export.rs  run_pulse.rs  run_pulse_class.rs  run_pulse_frame.rs  run_sample.rs  run_summary.rs
crates/turingos-observe/tests/: parity_projection_fixture.rs  run_cycle_fixture.rs
examples/: parity_demo_output.json
handover/: BOARD.md  README.md
harnesses/: __init__.py
scripts/: groundhog_parity_formal_test.sh  mission002_kimi_sidecar.sh
tests/: conftest.py  test_fs.py  test_ledger.py  test_llama_openai_agent.py  test_masking_and_scheduler.py  test_mission002_cases.py  test_mission002_prompting.py  test_mission002_runner.py  test_oracle.py  test_parity_runtime.py  test_terminal_tool.py  test_verifiers.py
turingos/: __init__.py  broadcast.py  cli.py  fs.py  ledger.py  masking.py  models.py  oracle.py  runtime.py  scheduler.py  signals.py  verifiers.py
(+396 files in other folders)
